--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /CDN_V5/.vs/CDN_V5
+/CDN_V5/.vs/ProjectEvaluation
